# seculint

./: .seculintignore  LICENSE  README.md  pyproject.toml
seculint/: .seculintignore  CHANGELOG.md  pyproject.toml
seculint/seculint/: __init__.py  ai_integration.py  cli.py  git_utils.py  ignore.py  models.py  patterns.py  reporting.py  scanner.py  seculintignore
