[project]
name = "seculint"
version = "0.2.0"
description = "Local secret & privacy leak scanner with optional AI verification"
authors = [
    {name = "Shahid Riaz Bhatti", email = "shahid.bhatti@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "setuptools (>=80.9.0,<81.0.0)",
    "wheel (>=0.45.1,<0.46.0)",
    "openai (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
seculint = "seculint.cli:main"

[dependency-groups]
dev = [
    "twine (>=6.2.0,<7.0.0)"
]
